--- a/.github/workflows/frontend-build-and-push.yaml
+++ b/.github/workflows/frontend-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and Push Docker Images
 on:
   push:
     paths:
-      - 'airbnbfrontend/**'
+      - 'Airbnb-Project/airbnbfrontend/**'
 
 jobs:
   build:
